--- a/Resto.NET/Resto.Net/Properties/Resources.resx
+++ b/Resto.NET/Resto.Net/Properties/Resources.resx
@@ -286,6 +286,9 @@
   <data name="MesasRectangular8_reservada" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MesasRectangular8_reservada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Resto_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Resto_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Silla1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Silla1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
